Changing how we use links so that we have correct dark mode support
We were using global CSS to override `<a>` tags before, but this had
issues with dark mode formatting. Now we have a standard `Link`
component that uses Tailwind for styling.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,13 +24,3 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
-
-@layer base {
-  a {
-    @apply text-blue-900;
-
-    @variant visited {
-      @apply text-purple-600;
-    }
-  }
-}
